[package]
name = "Tengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bevy_ecs = "0.10.1"
bytemuck = { version = "1.13.1", features = ["derive"] }
chrono = "0.4.24"
env_logger = "0.10.0"
image = { version = "0.24.6", features = ["png"] }
log = "0.4.17"
nalgebra = { version = "0.32.2", features = ["bytemuck"] }
parry3d = "0.13.4"
pollster = { version = "0.3.0", features = ["macro"] }
tobj = { version = "3.2.5", features = ["async"] }
wgpu = "0.16.0"
winit = "0.28.3"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
